# neurofeedback

./: .gitignore  CLAUDE.md  Organizational_Philosophy.md  README.md  TODO.md
_Old Plans/: 260420 ARCHITECTURE_AUDIT (Opus 4.7).md  (+2 more)
eeg/backend/: pyproject.toml
eeg/backend/eeg_backend/: contracts.py
eeg/backend/eeg_backend/api/: main.py  websocket.py
eeg/backend/eeg_backend/api/routes/: audio.py  device.py  metrics.py  programs.py  sessions.py  training.py
eeg/backend/eeg_backend/dsp/: constants.py  pipeline.py
eeg/backend/eeg_backend/hardware/: ble_client.py  replay.py
eeg/backend/eeg_backend/metrics/: engine.py
eeg/backend/eeg_backend/programs/: README.md  base.py  default_report.py  registry.py  templates.py
eeg/backend/eeg_backend/programs/alpha_feedback/: manifest.json  runtime.py
eeg/backend/eeg_backend/programs/alpha_theta_beta/: manifest.json  runtime.py
eeg/backend/eeg_backend/programs/alpha_theta_feedback/: manifest.json  runtime.py
eeg/backend/eeg_backend/programs/debug/: __init__.py  manifest.json  runtime.py
eeg/backend/eeg_backend/programs/master_feedback/: __init__.py  manifest.json  runtime.py
eeg/backend/eeg_backend/programs/smr_feedback/: manifest.json  runtime.py
eeg/backend/eeg_backend/reports/: base.py
eeg/backend/eeg_backend/runtime/: __init__.py  clock.py
eeg/backend/scripts/: analyze_edf_patterns.py  analyze_edf_power.py  analyze_edf_sections.py  format_section_outputs.py  render_section_topomaps.py  summarize_section_bands.py
eeg/backend/tests/: test_dsp.py  test_foundation.py  test_metrics.py  test_programs.py
(+97 files in other folders)
