[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "eeg-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "bleak>=0.22",
    "numpy>=1.26",
    "scipy>=1.13",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["eeg_backend*"]
